# isaac-repentance-eden-seed-decoder

./: .gitignore  MANIFEST.in  README.md  install_and_run.bat  itempools.xml  predict_eden.py  pyproject.toml
tools/: __init__.py  collectible_table.py  eden_display.py  eden_j460.py  eden_predict.py  eden_print.py  eden_reverse.py  eden_reverse_fast.py  eden_sim.py  eden_stats.py  eden_vanilla.py  game_rng.py  get_collectible.py  ida_rva.py  isaac_rng.py  item_pools.py  memory_fingerprint.py  pocket_format.py  pocket_lookup.py  profile_store.py  record_trinket_rng.py  rng.py  rng_consts.py  scan_memory_dump.py  seed_codec.py  trinket_eden.py  verify_eden_run.py  verify_trinket_roll.py  win_process_mem.py  xorshift32.py
web/: __init__.py  index.html  server.py
web/static/: app.js  field-help.js  i18n.js  style.css
